log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 08:02:43 PM UTC: 
 tests:  0|6
total_score: 0/70
ad3b139
Wed 29 Mar 2023 08:08:21 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8c6e3c9
Wed 29 Mar 2023 08:11:39 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
64a4356
Wed 29 Mar 2023 08:15:03 PM UTC: 
 arraylist.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|3
total_score: 30/70
9132154
Wed 29 Mar 2023 08:18:46 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|3
total_score: 30/70
73d4821
Wed 29 Mar 2023 08:19:14 PM UTC: 
 arraylist.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  5|3
total_score: 30/70
36934a0
Wed 29 Mar 2023 08:25:36 PM UTC: 
 arraylist.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
6f32dd3
Wed 29 Mar 2023 08:26:53 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|1
total_score: 50/70
a59b1cf
Wed 29 Mar 2023 08:29:46 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:77:8: error: ‘list’ undeclared (first use in this function)
   77 |   free(list->data);
      |        ^~~~
arraylist.c:77:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
83c0780
